--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- 🔥 User Interaction Div Start 🔥 -->
-    <div class="container-div" id="interaction-div">
+<!--     <div class="container-div" id="interaction-div">
         <div class="header">
             <div class="img">
                 <img src="resources/images/icon.gif" alt="icon" width="100px">
@@ -24,7 +24,7 @@
                 <h1>JavaScript Quiz</h1>
             </div>
         </div>
-
+ -->
         <form id="nameField" autocomplete="off" style="position: relative;">
             <i class="fa-solid fa-user"
                 style="position: absolute;font-size: 26px;top: 41px;left: 30px;color: rgb(82, 82, 241);"></i>
