--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <button class="btn" id="submit-btn" onclick="submitQuiz()"
                 style="padding-left: 32px;padding-right: 32px;">Submit</button>
 
-            <p id="time" style="font-weight: bold;">01:00</p>
+            <p id="time" style="font-weight: bold;width: 50px;">60</p>
         </div>
 
         <div class="indicators" style="display: flex;justify-content: space-evenly;vertical-align: center;">
